Menu nav pronto para desktop

--- a/index.html
+++ b/index.html
@@ -5,10 +5,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Union</title>
 </head>
 
 <body>
+
+    <header id="header">
+        <nav class="nav-header">
+            <div class="nav-container">
+                <div class="logo">
+                    <a href="#header">
+                        <img src="./icones/Union.svg" alt="">
+                    </a>
+                </div>
+                <div class="nav-itens">
+                    <ul class="nav-list">
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#services">Services</a></li>
+                        <li><a href="#clients">Clients</a></li>
+                    </ul>
+                    <a href="#contact" class="btn-1">Contact Us</a>
+                </div>
+            </div>
+
+        </nav>
+
+    </header>
 
 </body>
 
