brigando com o css

--- a/index.html
+++ b/index.html
@@ -11,26 +11,48 @@
 
 <body>
 
-    <header id="header">
-        <nav class="nav-header">
-            <div class="nav-container">
-                <div class="logo">
-                    <a href="#header">
-                        <img src="./icones/Union.svg" alt="">
-                    </a>
-                </div>
-                <div class="nav-itens">
-                    <ul class="nav-list">
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#services">Services</a></li>
-                        <li><a href="#clients">Clients</a></li>
-                    </ul>
-                    <a href="#contact" class="btn-1">Contact Us</a>
-                </div>
+    <nav class="nav-header">
+        <div class="nav-container">
+            <div class="logo">
+                <a href="#header">
+                    <img src="./icones/Union.svg" alt="">
+                </a>
             </div>
+            <div class="nav-itens">
+                <ul class="nav-list">
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#clients">Clients</a></li>
+                </ul>
+                <a href="#contact" class="btn-1">Contact Us</a>
+            </div>
+        </div>
 
-        </nav>
+    </nav>
 
+
+    <header id="header">
+        <div class="header-title">
+            <h1>Crafting Stories<br>
+                with Creative<br>
+                Thought
+            </h1>
+        </div>
+        <div class="header-text">
+            <div>
+                <h2 class="title">
+                    Bridge the difference between the idea and reality
+                </h2>
+                <p class="text">
+                    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis
+                    enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                </p>
+            </div>
+        </div>
+        <div class="img-intro">
+            <img src="./imagens/image.jpg" alt="" width="800" height="642">
+        </div>
     </header>
 
 </body>
