Sessões iniciais  concluidas e responsivas

--- a/index.html
+++ b/index.html
@@ -29,17 +29,13 @@
         </div>
 
     </nav>
-
-
     <header id="header">
-        <div class="header-title">
+        <div class="header-container">
             <h1>Crafting Stories<br>
                 with Creative<br>
                 Thought
             </h1>
-        </div>
-        <div class="header-text">
-            <div>
+            <div class="header-intro">
                 <h2 class="title">
                     Bridge the difference between the idea and reality
                 </h2>
@@ -50,10 +46,27 @@
                 </p>
             </div>
         </div>
-        <div class="img-intro">
-            <img src="./imagens/image.jpg" alt="" width="800" height="642">
-        </div>
+
     </header>
+
+    <section id="about">
+
+        <div class="about-container">
+            <p class="subtitulo">About</p>
+
+            <h2 class="title">
+                We take your business goals to the next level.
+            </h2>
+
+            <p class="text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum
+                tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae
+                erat.
+            </p>
+
+            <a href="#about" class="btn-2">Learn More</a>
+        </div>
+    </section>
 
 </body>
 
