Area de serviços completa

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 </head>
 
 <body>
-
     <nav class="nav-header">
         <div class="nav-container">
             <div class="logo">
@@ -27,7 +26,6 @@
                 <a href="#contact" class="btn-1">Contact Us</a>
             </div>
         </div>
-
     </nav>
     <header id="header">
         <div class="header-container">
@@ -46,27 +44,63 @@
                 </p>
             </div>
         </div>
-
     </header>
-
     <section id="about">
-
         <div class="about-container">
             <p class="subtitulo">About</p>
-
             <h2 class="title">
                 We take your business goals to the next level.
             </h2>
-
             <p class="text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum
                 tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae
                 erat.
             </p>
-
             <a href="#about" class="btn-2">Learn More</a>
         </div>
     </section>
+
+    <section id="services">
+        <div class="services-img">
+            <img src="./imagens/image-services.jpg" alt="">
+        </div>
+        <div class="services-content">
+            <p class="subtitulo">
+                Services
+            </p>
+            <h2 class="title">
+                What we do and how we do it
+            </h2>
+
+            <ul class="services-list">
+                <li>Service Design</li>
+                <li>Visual Design</li>
+                <li>Brand & Marketing</li>
+                <li>Website & App Development</li>
+            </ul>
+
+            <a href="#services" class="btn-1">Learn More</a>
+        </div>
+    </section>
+
+    <!-- <section id="study">
+        <div class="study-container">
+            <div class="study-text">
+                <p class="subtitulo">Case Studies</p>
+                <h2 class="title">Branding for Acme Corp</h2>
+                <p class="text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum
+                    tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero
+                    vitae erat.
+                </p>
+
+                <a href="#" class="btn-2">Read More</a>
+            </div>
+            <div class="img-study">
+                <img src="./imagens/image-case-study.jpg" alt="">
+            </div>
+        </div>
+    </section> -->
 
 </body>
 
