--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <section id="services">
         <div class="services-img">
-            <img src="./imagens/image-services.jpg" alt="">
+            <img src="./imagens/image-services.jpg" alt="" width="800" height="760">
         </div>
         <div class="services-content">
             <p class="subtitulo">
@@ -83,7 +83,7 @@
         </div>
     </section>
 
-    <!-- <section id="study">
+    <section id="study">
         <div class="study-container">
             <div class="study-text">
                 <p class="subtitulo">Case Studies</p>
@@ -97,11 +97,54 @@
                 <a href="#" class="btn-2">Read More</a>
             </div>
             <div class="img-study">
-                <img src="./imagens/image-case-study.jpg" alt="">
+                <img src="./imagens/image-case-study.jpg" alt="" width="800" height="642">
             </div>
         </div>
-    </section> -->
+    </section>
 
+    <section id="FAQs">
+        <div class="faqs-container">
+            <p class="subtitulo">FAQs</p>
+            <h2 class="title">Got questions? We have some answers.</h2>
+            <dl class="text questions">
+                <dt>This is a question</dt>
+                <dd>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum
+                    tristique.</dd>
+
+                <span class="line"></span>
+                <dt>This is a question</dt>
+                <dd>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum
+                    tristique.</dd>
+                <span class="line"></span>
+                <dt>This is a question</dt>
+                <dd>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum
+                    tristique.</dd>
+                <span class="line"></span>
+                <dt>This is a question</dt>
+                <dd>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum
+                    tristique.</dd>
+
+            </dl>
+            <a href="#FAQs" class="btn-2">More Questions</a>
+        </div>
+    </section>
+
+    <section id="contact">
+        <div class="contact-box">
+            <div class="contact-content">
+                <h2 class="title">Get in Touch</h2>
+                <p class="text">
+                    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.
+                </p>
+
+                <form action="./" method="">
+                    <input type="email" id="email" placeholder="Your email">
+                    <button>Email Me</button>
+                </form>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
