Correção de bugs

--- a/index.html
+++ b/index.html
@@ -145,6 +145,10 @@
             </div>
         </div>
     </section>
+
+    <footer>
+        <p>Desenvolvido por <a href="https://github.com/JuniorAlvesDEV" target="_blank">JuniorDEV</a></p>
+    </footer>
 </body>
 
 </html>
